# ObsidianTranscriber

./: .gitignore  README.md  launcher_gui.py  pyproject.toml  sotto.spec  whisper.spec  wisper.spec
assets/: create_sample.ps1  sample.md
packaging/: launcher_gui.py  sotto.spec
src/whisper_transcribe/: build_exe.py  cli.py  config.py  gui.py  i18n.py  model_cache.py  model_size.py  recorder.py  runner.py
src/whisper_transcribe/core/: __init__.py  models.py  recorder.py  transcribe.py
src/whisper_transcribe/ui/: __init__.py  app.py  dialogs.py  i18n.py  theme.py  win32.py
src/wisper/: build_exe.py  gui.py  model_size.py  runner.py
tests/: test_config.py  test_core.py
