[project]
name = "whisper-transcribe"
version = "0.1.0"
description = "Local audio transcription with faster-whisper"
requires-python = ">=3.11,<3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.23.2.1",
    "tkinterdnd2>=0.4.3",
    "typer>=0.25.1",
    "tzdata>=2026.2",
]

[project.scripts]
wisper = "wisper.runner:app"
wisper-gui = "wisper.gui:main"
wisper-build = "wisper.build_exe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wisper"]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
