[project]
name = "whisper-transcribe"
version = "0.1.0"
description = "Local audio transcription with faster-whisper"
requires-python = ">=3.11,<3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "huggingface-hub>=1.21.0",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.23.2.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "tkinterdnd2>=0.4.3",
    "typer>=0.25.1",
    "tzdata>=2026.2",
]

[project.scripts]
whisper-transcribe = "whisper_transcribe.runner:app"
whisper-transcribe-gui = "whisper_transcribe.gui:main"
whisper-transcribe-build = "whisper_transcribe.build_exe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_transcribe"]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pyinstaller>=6.21.0",
]

[tool.mypy]
python_version = "3.11"
files = ["src/whisper_transcribe"]
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "tkinterdnd2",
    "tkinterdnd2.*",
    "faster_whisper",
    "faster_whisper.*",
    "PyInstaller.*",
    "sounddevice",
    "soundfile",
    "tqdm.*",
]
ignore_missing_imports = true
